--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <title>OurFirstWebsite</title>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
-  <h1 id="titolo">Primo sito</h1>
+  <hr>
+  </hr>
+  <h1 id="titolo">AF.web</h1>
   <p>Ciao</p>
+  <a href="login.html">pg2</a>
 </body>
 
 </html>
