nuovo codice per pagina login

--- a/login.html
+++ b/login.html
@@ -9,11 +9,15 @@
 </head>
 
 <body>
-  <div id="login"> <label for="email">Email:</label><br>
-    <form><input type="email"></form>
-    <label for="username">Username:</label><br>
-    <form><input type="text" </form><br>
-      <label for="password">Password:</label><br>
-      <form><input type="password" </form>
+  <h1 id="title">LOGIN</h1>
+  <div id="login">
+    <label id="logl" for="email">Email:</label><br>
+    <input id="log" type="email"><br>
+    <label id="logl" for="username">Username:</label><br>
+    <input id="log" type="text"><br>
+    <label id="logl" for="password">Password:</label><br>
+    <input id="log" type="password"><br>
+    <br>
+    <input id="submit" type="submit" value="Submit">
   </div>
 </body>
